--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "clipboard": "^2.0.1",
     "dotenv": "^5.0.0",
     "firebase": "^4.9.0",
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
+    "react-ace": "^6.1.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0"
